--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,22 +1,28 @@
 @import "tailwindcss";
-@plugin "@tailwindcss/typography";
+@import "./header.css";
 
 @theme {
-  --font-headings: var(--font-mono);
+  --font-body: var(--font-space-grotesk);
+  --font-secondary: var(--font-space-mono);
+
+  --color-hover: var(--color-blue-100);
+  --color-shadow: var(--color-blue-900);
+  --color-grey: var(--color-neutral-500);
   /* --color-primary: var(--color-stone-950);
   --color-secondary: var(--color-stone-50);
   --color-light: var(--color-zinc-800);
-  --color-grey: var(--color-zinc-200);
-  --color-accent: var(--color-lime-200); */
+   */
   --spacing-svw: min(3svw, 48px);
   --spacing-section: max(90px, calc(var(--spacing-svw) * 4));
   --spacing-section-sm: calc(var(--spacing-section) / 3);
 
-  --text-responsive: clamp(1rem, 0.9342rem + 0.3289svw, 1.25rem);
+  /* --text-responsive: clamp(1rem, 0.9342rem + 0.3289svw, 1.25rem);
   --text-responsive-sm: calc(var(--text-responsive) * 0.875);
-  /* --spacing-section: clamp(90px, 12svw, 180px); */
-  /* --spacing-section-xs: calc(var(--spacing-section) / 3); */
-  /* --text-em-sm: 0.875em; */
+    --fs-md: clamp(1.25rem, 0.61vi + 1.1rem, 1.58rem);
+  --fs-lg: clamp(1.56rem, 1vi + 1.31rem, 2.11rem);
+  --fs-xl: clamp(1.95rem, 1.56vi + 1.56rem, 2.81rem);
+  --fs-xxl: clamp(2.44rem, 2.38vi + 1.85rem, 3.75rem);
+  --fs-xxxl: clamp(3.05rem, 3.54vi + 2.17rem, 5rem); */
 }
 
 @layer base {
@@ -27,62 +33,60 @@
     height: 100%;
   }
 
-  /* --fs-md: clamp(1.25rem, 0.61vi + 1.1rem, 1.58rem);
-  --fs-lg: clamp(1.56rem, 1vi + 1.31rem, 2.11rem);
-  --fs-xl: clamp(1.95rem, 1.56vi + 1.56rem, 2.81rem);
-  --fs-xxl: clamp(2.44rem, 2.38vi + 1.85rem, 3.75rem);
-  --fs-xxxl: clamp(3.05rem, 3.54vi + 2.17rem, 5rem); */
+  html {
+    @apply scroll-smooth scroll-pt-[calc(var(--spacing-section)*1.5)];
+  }
 
   body {
     scrollbar-gutter: stable both-edges;
-    font-size: var(--text-responsive);
+    font-family: var(--font-body);
   }
 
-  body:has(dialog[open]) {
+  body:has(> header.header--open) {
     overflow: hidden;
   }
 
-  h1,
-  h2,
-  h3,
-  h4,
-  h5 {
-    font-family: var(--font-headings);
-    font-weight: 400;
-  }
-
   h1 {
-    font-size: clamp(2.25rem, 1.42rem + 4.15svw, 4.5rem);
-    /* @apply text-[clamp(30px,1rem+6.3svw,4rem)]; */
+    font-size: clamp(1.313rem, 5.625vw + 0.188rem, 5.25rem);
   }
 
-  h2 {
-    /* /* @apply  leading-tight text-3xl tracking-tighter;  */
-    font-size: clamp(1.5rem, 0.97rem + 2.63svw, 3rem);
-    margin-bottom: min(0.66em, 30px);
-    /* @apply text-[clamp(18px,.5rem+3.6svw,2rem)]; */
+  .wrapper {
+    @apply w-full 2xl:container mx-auto px-svw;
   }
 
-  h3 {
-    font-size: clamp(1.25rem, 0.61rem + 1.1svw, 2rem);
-    margin-bottom: min(0.36em, 15px);
-    /* @apply text-[clamp(16px,.5rem+2.4svw,1.5rem)] tracking-tight; */
-  }
-
-  h4 {
-    font-size: clamp(1.125rem, 0.61rem + 0.8svw, 1.5rem);
-    margin-bottom: min(0.3em, 10px);
-    /* @apply text-[clamp(14px,.5rem+2svw,1.25rem)] tracking-tight; */
+  .heading-mono {
+    @apply font-secondary uppercase text-sm;
   }
 }
 
 @layer components {
-  #main {
-    @apply flex flex-col gap-y-section;
+  body:has(dialog[open]) {
+    overflow: hidden;
   }
 
-  #hero {
-    min-height: 100dvh;
-    @apply flex flex-col;
+  #contacts {
+    @apply relative top-[calc(var(--spacing-section)/-3)];
+  }
+
+  @media (min-width: 48rem) {
+    .grid-wrapper {
+      @apply grid grid-cols-[1fr_42ch_1fr] gap-x-4;
+    }
+
+    .grid-wrapper__center-cell {
+      @apply col-start-2 col-end-3;
+    }
+
+    /* #hero p {
+      @apply me-[27rem] max-w-[calc(100%-26rem)];
+    } */
+  }
+}
+
+@layer utilities {
+  @media (min-width: 48rem) {
+    .grid-wrapper .grid-wrapper__subgrid {
+      @apply grid col-start-1 col-end-4 grid-cols-subgrid;
+    }
   }
 }
