--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,19 +1,25 @@
 ---
+import { Image } from "astro:assets";
+
 import Layout from "../layouts/Layout.astro";
 
 import SocialLinksList from "../components/SocilaLinksList.astro";
+import ServicesSection from "../components/ServicesSection.astro";
 import HowToSection from "../components/HowToSection.astro";
 import ToolsSection from "../components/ToolsSection.astro";
+
+// import BG from "../assets/images/hero-bg.svg";
+import Background from "../assets/images/hero-bg.png";
 ---
 
 <Layout>
-  <dialog
+  <!-- <dialog
     aria-labelledby="dialog-name"
     id="under-construction"
     class="w-[30rem] max-w-[94%] m-auto text-center bg-white p-0 border-0 rounded-md shadow-xl backdrop:bg-indigo-200/48 backdrop:backdrop-blur-md"
   >
     <div class="p-6">
-      <h2 id="dialog-name" class="text-2xl font-mono mb-4">
+      <h2 id="dialog-name" class="text-2xl mb-4">
         This site is in development
       </h2>
       <p class="mb-4">
@@ -28,50 +34,55 @@ import ToolsSection from "../components/ToolsSection.astro";
         View current content
       </button>
     </div>
-  </dialog>
+  </dialog> -->
 
-  <header class="absolute py-3">
-    <p class="font-mono flex flex-col">
-      <span class="tracking-tighter leading-none">Ivan Pozdnovskii</span>
-      <span class="text-responsive-sm">Website Developer</span>
-    </p>
-    <!-- <nav class="hidden">
-      <ul class="flex gap-x-4">
-        <li><a href="#services">Services</a></li><li>
-          <a href="#works">Works</a>
-        </li>
-        <li><a href="practices">Practices</a></li>
-      </ul>
-    </nav> -->
-  </header>
+  <main id="main" class="relative flex flex-col gap-y-section overflow-hidden">
+    <section
+      id="hero"
+      class="wrapper min-h-dvh pt-30 pb-2 gap-[min(21svw,80px)] justify-between flex flex-col-reverse w-full relative md:pt-5"
+    >
+      <h1
+        class="leading-tight indent-[2ch] font-medium uppercase w-[15em] max-w-full pb-section md:leading-[1.2]"
+      >
+        Meticulous Developer For Your Website
+      </h1>
+      <p
+        class="indent-[2ch] leading-tight w-84 max-w-full ms-auto md:me-108 md:max-w-[calc(100%-26rem)]"
+      >
+        I specialize in fast-loading, SEO-friendly, accessible websites — built
+        to rank higher and perform better.
+      </p>
 
-  <main id="main">
-    <section id="hero" class="pb-4 gap-[min(21svw,80px)] justify-end pt-24">
-      <div class="relative flex flex-col">
-        <h1
-          class="leading-[1.15em] text-balance w-[15em] max-w-full mb-[.36em] opacity-80"
-        >
-          Meticulous Developer For Your Website
-        </h1>
-        <p
-          class="text-[clamp(16px,.3rem+3.6svw,1.75rem)] leading-relaxed md:leading-tight w-[24em] max-w-full"
-        >
-          I specialize in fast-loading, SEO-friendly, accessible websites —
-          built to <span class="inline-block italic font-serif"
-            >rank higher and perform better.</span
-          >
-        </p>
-      </div>
+      <a href="#contacts" class="absolute self-end heading-mono flex gap-x-8">
+        <span>Explore</span><span>↓</span></a
+      >
+    </section>
+    <Image
+      src={Background}
+      alt=" "
+      aria-hidden
+      class="object-cover absolute -z-1 h-[110svh] opacity-60 aspect-[5/4]"
+    />
+
+    <section id="contacts" class="wrapper">
+      <p class="indent-[2ch] mb-7">
+        I prefer clean code, as it creates the fastest, most SEO-optimized, and
+        accessible websites. This brings more traffic, better engagement, and
+        future scalability as your business grows.
+      </p>
+
       <div class="">
-        <h2 class="mb-0">Write me here:</h2>
+        <h2 class="heading-mono">Contact Me →</h2>
         <address>
           <SocialLinksList />
         </address>
       </div>
     </section>
 
-    <HowToSection />
+    <ServicesSection />
 
     <ToolsSection />
+
+    <HowToSection />
   </main>
 </Layout>
