--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,7 +39,7 @@ import Background from "../assets/images/hero-bg.png";
   <main id="main" class="relative flex flex-col gap-y-section overflow-hidden">
     <section
       id="hero"
-      class="wrapper min-h-dvh pt-30 pb-2 gap-[min(21svw,80px)] justify-between flex flex-col-reverse w-full relative md:pt-5"
+      class="wrapper min-h-svh pt-30 pb-2 gap-[min(21svw,80px)] justify-between flex flex-col-reverse w-full relative md:pt-5"
     >
       <h1
         class="leading-tight indent-[2ch] font-medium uppercase w-[15em] max-w-full pb-section md:leading-[1.2]"
