--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -46,9 +46,17 @@
 
   #header-top::after,
   #nav-content::after {
-    @apply absolute col-start-2 w-[2px] -left-[2px] top-[5px] bottom-[5px];
+    @apply absolute col-start-2 w-[2px] -left-[2px] bottom-[5px];
     background-image: linear-gradient(180deg, var(--header-gradient));
     background-size: 100% 4px;
+  }
+
+  #header-top::after {
+    @apply top-[5px];
+  }
+
+  #nav-content::after {
+    @apply top-[7px];
   }
 
   #header-nav::before,
