--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -31,17 +31,16 @@ import SocialLinksList from "../components/SocilaLinksList.astro";
             <a href="#services"><span aria-hidden>01</span>Services</a>
           </li>
           <li>
-            <a href="#tools"><span aria-hidden>02</span>Tools</a>
+            <a href="#tools"><span aria-hidden>02</span>Technologies & Tools</a>
           </li>
           <li>
-            <a href="#how-to"><span aria-hidden>03</span>How To</a>
+            <a href="#how-to"
+              ><span aria-hidden>03</span>Principles & Approach</a
+            >
           </li>
-          <li>
+          <!-- <li>
             <a href="#projects"><span aria-hidden>04</span>Projects</a>
-          </li>
-          <li>
-            <a href="#contacts"><span aria-hidden>05</span>Contacts</a>
-          </li>
+          </li> -->
         </ul>
         <address class="">
           <SocialLinksList variant="vertical" />
