--- a/src/components/HowToSection.astro
+++ b/src/components/HowToSection.astro
@@ -3,7 +3,7 @@ import Section from "./Section.astro";
 import tabs from "../data/howTo.json";
 ---
 
-<Section id="how-to" title="How I Work" class="wrapper grid-wrapper">
+<Section id="how-to" title="Principles & Approach" class="wrapper grid-wrapper">
   <main class="grid-wrapper__subgrid" data-tabs>
     <div
       role="tablist"
