--- a/src/components/ServicesSection.astro
+++ b/src/components/ServicesSection.astro
@@ -13,9 +13,9 @@ import Section from "./Section.astro";
         accessibility, and SEO in mind.
       </p>
       <p>
-        For each project, I pick the perfect tech stack—custom code from scratch
-        or no/low-code platforms like Webflow, Webstudio, Shopify or Framer,
-        depending on your goals.
+        For each project, I pick the perfect tech stack — custom code from
+        scratch or no/low-code platforms like Webflow, Webstudio, Shopify or
+        Framer, depending on your goals.
       </p>
     </ServiceCard>
 
@@ -41,7 +41,10 @@ import Section from "./Section.astro";
         conversions. Together, we create websites that don't just look good —
         they work hard to grow your business.
       </p>
-      <aside slot="aside" class="grid-wrapper__center-cell mt-6">
+      <aside
+        slot="aside"
+        class="grid-wrapper__center-cell flex flex-wrap justify-between items-center gap-x-6 indent-0 max-w-prose mt-6"
+      >
         <p>Designer? <span class="heading-mono"> Let's collaborate →</span></p>
         <address><SocilaLinksList /></address>
       </aside>
