--- a/src/components/ToolCard.astro
+++ b/src/components/ToolCard.astro
@@ -3,7 +3,7 @@ const { figcaption, logos } = Astro.props;
 ---
 
 <li
-  class={`border border-dashed border-neutral-500 p-3 rounded-md ${
+  class={`border border-dashed border-neutral-500 p-3 ${
     logos ? "" : "flex items-end"
   }`}
 >
