--- a/src/components/ToolsSection.astro
+++ b/src/components/ToolsSection.astro
@@ -6,7 +6,7 @@ import tools from "../data/tools";
 
 <Section id="tools" title="Technologies & Tools" class="wrapper">
   <ul
-    class="w-full grid grid-cols-2 gap-3 *:nth-[3n-2]:col-span-2 [&_svg]:h-8 md:grid-cols-3 md:*:nth-4:col-span-1 xl:grid-cols-4 xl:*:first:row-span-2 xl:*:nth-2:col-4"
+    class="w-full grid grid-cols-2 *:nth-[3n-2]:col-span-2 [&_svg]:h-8 md:grid-cols-3 md:*:nth-4:col-span-1 xl:grid-cols-4 xl:*:first:row-span-2 xl:*:nth-2:col-4"
   >
     {
       tools.map(({ figcaption, logos }) => (
