--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import Background from "../assets/images/hero-bg.png";
 ---
 
 <Layout>
-  <!-- <dialog
+  <dialog
     aria-labelledby="dialog-name"
     id="under-construction"
     class="w-[30rem] max-w-[94%] m-auto text-center bg-white p-0 border-0 rounded-md shadow-xl backdrop:bg-indigo-200/48 backdrop:backdrop-blur-md"
@@ -34,27 +34,35 @@ import Background from "../assets/images/hero-bg.png";
         View current content
       </button>
     </div>
-  </dialog> -->
+  </dialog>
 
-  <main id="main" class="relative flex flex-col gap-y-section overflow-hidden">
+  <main
+    id="main"
+    class="relative flex flex-col gap-y-section overflow-hidden pb-section"
+  >
     <section
       id="hero"
-      class="wrapper min-h-svh pt-30 pb-2 gap-[min(21svw,80px)] justify-between flex flex-col-reverse w-full relative md:pt-5"
+      class="wrapper min-h-svh pt-27 pb-2 gap-[min(21svw,80px)] justify-between flex flex-col-reverse w-full relative md:pt-5"
     >
       <h1
-        class="leading-tight indent-[2ch] font-medium uppercase w-[15em] max-w-full pb-section md:leading-[1.2]"
+        class="leading-tight indent-[2ch] font-medium uppercase w-[15em] max-w-full pb-section-sm md:leading-[1.2] md:pb-svw"
       >
         Meticulous Developer For Your Website
       </h1>
       <p
-        class="indent-[2ch] leading-tight w-96 max-w-full ms-auto md:me-108 md:max-w-[calc(100%-26rem)]"
+        class="indent-text-indent leading-tight w-96 max-w-full ms-auto md:me-102 md:w-87 md:max-w-[calc(100%-var(--spacing)*99)]"
       >
         I specialize in fast-loading, SEO-friendly, accessible websites — built
         to rank higher and perform better.
       </p>
 
-      <a href="#contacts" class="absolute self-end heading-mono flex gap-x-8">
-        <span>Explore</span><span>↓</span></a
+      <a
+        href="#contacts"
+        class="absolute self-end heading-mono flex gap-x-8 md:w-xs md:max-w-[calc(100%-var(--spacing-svw)*2)]"
+      >
+        <span aria-hidden class="hidden md:block md:me-auto">/</span><span
+          >Explore</span
+        ><span>↓</span></a
       >
     </section>
     <Image
@@ -64,14 +72,14 @@ import Background from "../assets/images/hero-bg.png";
       class="object-cover absolute -z-1 h-[110svh] opacity-60 aspect-[5/4]"
     />
 
-    <section id="contacts" class="wrapper">
-      <p class="indent-[2ch] mb-7">
+    <section id="contacts" class="wrapper grid-wrapper">
+      <p class="mb-7 indent-text-indent">
         I prefer clean code, as it creates the fastest, most SEO-optimized, and
         accessible websites. This brings more traffic, better engagement, and
         future scalability as your business grows.
       </p>
 
-      <div class="">
+      <div class="flex flex-wrap justify-between items-center gap-x-6">
         <h2 class="heading-mono">Contact Me →</h2>
         <address>
           <SocialLinksList />
