--- a/src/components/ServiceCard.astro
+++ b/src/components/ServiceCard.astro
@@ -4,7 +4,7 @@ import Sdf from "../assets/images/sdf.svg";
 ---
 
 <article
-  class="border-t border-dashed border-neutral-500 py-6 grid-wrapper__subgrid [&:last-child_svg]:hidden md:[&:last-child_svg]:block"
+  class="grid border-t border-dashed border-neutral-500 py-6 grid-wrapper__subgrid max-md:[&:last-child>svg]:hidden"
 >
   <span aria-hidden class="mb-3">S/{index}</span>
   <h3 class="text-2xl mb-6">{title}</h3>
