--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -28,14 +28,16 @@ import SocialLinksList from "../components/SocilaLinksList.astro";
           class="flex flex-col gap-y-3 relative overflow-visible p-3 [&_span]:me-2 [&_span]:font-secondary"
         >
           <li>
-            <a href="#services"><span aria-hidden>01</span>Services</a>
+            <a href="#services"><span aria-hidden="true">01</span>Services</a>
           </li>
           <li>
-            <a href="#tools"><span aria-hidden>02</span>Technologies & Tools</a>
+            <a href="#tools"
+              ><span aria-hidden="true">02</span>Technologies & Tools</a
+            >
           </li>
           <li>
             <a href="#how-to"
-              ><span aria-hidden>03</span>Principles & Approach</a
+              ><span aria-hidden="true">03</span>Principles & Approach</a
             >
           </li>
           <!-- <li>
