--- a/src/components/HowToSection.astro
+++ b/src/components/HowToSection.astro
@@ -19,7 +19,7 @@ import PrinciplesIcon from "../assets/images/principles.svg";
             aria-selected={index === 0 ? "true" : "false"}
             aria-controls={`panel-${index}`}
             tabindex={index === 0 ? "0" : "-1"}
-            class="px-2.5 py-1.5 rounded-t-sm border border-neutral-500 border-b-0 aria-selected:bg-neutral-500"
+            class="px-2.5 py-1.5 rounded-t-sm border border-neutral-500 border-b-0 cursor-pointer aria-selected:bg-neutral-500"
             data-tab-button
           >
             {tab.title}
