--- a/src/components/SectionHeading.astro
+++ b/src/components/SectionHeading.astro
@@ -6,5 +6,5 @@ const { title, id } = Astro.props;
   id={id}
   class="heading-mono flex justify-between grid-wrapper__subgrid mb-6"
 >
-  <span aria-hidden>/</span><span>{title}</span>
+  <span aria-hidden="true">/</span><span>{title}</span>
 </h2>
