--- a/src/components/ServiceCard.astro
+++ b/src/components/ServiceCard.astro
@@ -6,7 +6,7 @@ import Sdf from "../assets/images/sdf.svg";
 <article
   class="grid border-t border-dashed border-neutral-500 py-6 grid-wrapper__subgrid max-md:[&:last-child>svg]:hidden"
 >
-  <span aria-hidden class="mb-3">S/{index}</span>
+  <span aria-hidden="true" class="mb-3">S/{index}</span>
   <h3 class="text-2xl mb-6">{title}</h3>
   <main
     class="grid-wrapper__center-cell indent-text-indent leading-7 max-w-prose flex flex-col gap-y-2 mt-auto"
