--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import Background from "../assets/images/hero-bg.png";
 ---
 
 <Layout>
-  <dialog
+  <!-- <dialog
     aria-labelledby="dialog-name"
     id="under-construction"
     class="w-[30rem] max-w-[94%] m-auto text-center bg-white p-0 border-0 rounded-md shadow-xl backdrop:bg-indigo-200/48 backdrop:backdrop-blur-md"
@@ -34,7 +34,7 @@ import Background from "../assets/images/hero-bg.png";
         View current content
       </button>
     </div>
-  </dialog>
+  </dialog> -->
 
   <main
     id="main"
@@ -60,16 +60,16 @@ import Background from "../assets/images/hero-bg.png";
         href="#contacts"
         class="absolute self-end heading-mono flex gap-x-8 md:w-xs md:max-w-[calc(100%-var(--spacing-svw)*2)]"
       >
-        <span aria-hidden class="hidden md:block md:me-auto">/</span><span
-          >Explore</span
-        ><span>↓</span></a
+        <span aria-hidden="true" class="hidden md:block md:me-auto">/</span
+        ><span>Explore</span><span>↓</span></a
       >
     </section>
     <Image
       src={Background}
       alt=" "
-      aria-hidden
-      class="object-cover absolute -z-1 h-[110svh] opacity-60 aspect-[5/4]"
+      aria-hidden="true"
+      class="object-cover absolute -z-1 h-[110svh] opacity-60"
+      priority
     />
 
     <section id="contacts" class="wrapper grid-wrapper">
