--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import { Image } from "astro:assets";
+// import { Picture } from "astro:assets";
 
 import Layout from "../layouts/Layout.astro";
 
@@ -9,11 +10,12 @@ import HowToSection from "../components/HowToSection.astro";
 import ToolsSection from "../components/ToolsSection.astro";
 
 // import BG from "../assets/images/hero-bg.svg";
-import Background from "../assets/images/hero-bg.png";
+import BackgroundDesk from "../assets/images/hero-bg-desk.webp";
+// import BackgroundMob from "../assets/images/hero-bg-mob.png";
 ---
 
 <Layout>
-  <!-- <dialog
+  <dialog
     aria-labelledby="dialog-name"
     id="under-construction"
     class="w-[30rem] max-w-[94%] m-auto text-center bg-white p-0 border-0 rounded-md shadow-xl backdrop:bg-indigo-200/48 backdrop:backdrop-blur-md"
@@ -34,7 +36,7 @@ import Background from "../assets/images/hero-bg.png";
         View current content
       </button>
     </div>
-  </dialog> -->
+  </dialog>
 
   <main
     id="main"
@@ -64,11 +66,12 @@ import Background from "../assets/images/hero-bg.png";
         ><span>Explore</span><span>↓</span></a
       >
     </section>
+
     <Image
-      src={Background}
+      src={BackgroundDesk}
       alt=" "
       aria-hidden="true"
-      class="object-cover absolute -z-1 h-[110svh] opacity-60"
+      class="object-cover absolute -z-1 h-[110svh]"
       priority
     />
 
