--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,6 +30,10 @@ const description =
     <meta name="twitter:image" content="/opengraph.webp" />
     <link rel="canonical" href={canonicalURL} />
     <meta name="robots" content="index, follow" />
+    <script
+      defer
+      src="https://cloud.umami.is/script.js"
+      data-website-id="63b3ed92-ca97-4846-a043-2d135db38955"></script>
     <!-- <meta name="view-transition" content="same-origin" /> -->
     <Font cssVariable="--font-space-grotesk" preload />
     <Font cssVariable="--font-space-mono" preload />
