--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,6 +29,7 @@ import backgroundDesk from "../assets/images/hero-bg-desk.webp";
         my profiles.
       </p>
       <button
+        data-umami-event="close-dialog"
         onclick="document.querySelector('dialog').close();"
         id="close-dialog"
         class="mt-4 px-4 py-2 bg-gray-800 text-white rounded cursor-pointer hover:bg-gray-600 transition"
@@ -59,6 +60,7 @@ import backgroundDesk from "../assets/images/hero-bg-desk.webp";
       </p>
 
       <a
+        data-umami-event="click-explore"
         href="#contacts"
         class="absolute self-end heading-mono flex gap-x-8 md:w-xs md:max-w-[calc(100%-var(--spacing-svw)*2)]"
       >
