--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -86,20 +86,20 @@ const description =
         });
 
         // Dialogue
-        const dialog = document.querySelector("dialog");
+        // const dialog = document.querySelector("dialog");
 
-        if (!dialog) return;
+        // if (!dialog) return;
 
-        setTimeout(() => {
-          dialog.showModal();
-        }, 1200);
+        // setTimeout(() => {
+        //   dialog.showModal();
+        // }, 1200);
 
-        dialog.addEventListener("click", (event) => {
-          const isBackdropClick = event.target === dialog;
-          if (isBackdropClick) {
-            dialog.close();
-          }
-        });
+        // dialog.addEventListener("click", (event) => {
+        //   const isBackdropClick = event.target === dialog;
+        //   if (isBackdropClick) {
+        //     dialog.close();
+        //   }
+        // });
 
         // Url cleaner
         document.querySelectorAll('a[href^="#"]').forEach((anchor) => {
