--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import backgroundDesk from "../assets/images/hero-bg-desk.webp";
 ---
 
 <Layout>
-  <dialog
+  <!-- <dialog
     aria-labelledby="dialog-name"
     id="under-construction"
     class="w-[30rem] max-w-[94%] m-auto text-center bg-white p-0 border-0 rounded-md shadow-xl backdrop:bg-indigo-200/48 backdrop:backdrop-blur-md"
@@ -37,7 +37,7 @@ import backgroundDesk from "../assets/images/hero-bg-desk.webp";
         View current content
       </button>
     </div>
-  </dialog>
+  </dialog> -->
 
   <main
     id="main"
